// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RestoreKeyBackupDialog /> should display an error when recovery key is invalid 1`] = `
<DocumentFragment>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-labelledby="mx_BaseDialog_title"
    class="mx_RestoreKeyBackupDialog mx_Dialog_fixedWidth"
    data-focus-lock-disabled="false"
    role="dialog"
  >
    <div
      class="mx_Dialog_header"
    >
      <h1
        class="mx_Heading_h3 mx_Dialog_title"
        id="mx_BaseDialog_title"
      >
        Enter Recovery Key
      </h1>
    </div>
    <div
      class="mx_RestoreKeyBackupDialog_content"
    >
      <div>
        <p>
          <span>
            <strong>
              Warning
            </strong>
            : you should only set up key backup from a trusted computer.
          </span>
        </p>
        <p>
          Access your secure message history and set up secure messaging by entering your Recovery Key.
        </p>
        <div
          class="mx_RestoreKeyBackupDialog_primaryContainer"
        >
          <input
            class="mx_RestoreKeyBackupDialog_recoveryKeyInput"
            value="invalid key"
          />
          <div
            class="mx_RestoreKeyBackupDialog_keyStatus"
          >
            👎 Not a valid Recovery Key
          </div>
          <div
            class="mx_Dialog_buttons"
          >
            <span
              class="mx_Dialog_buttons_row"
            >
              <button
                data-testid="dialog-cancel-button"
                type="button"
              >
                Cancel
              </button>
              <button
                class="mx_Dialog_primary"
                data-testid="dialog-primary-button"
                disabled=""
                type="button"
              >
                Next
              </button>
            </span>
          </div>
        </div>
        <span>
          If you've forgotten your Recovery Key you can 
          <div
            class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_link_inline"
            role="button"
            tabindex="0"
          >
            set up new recovery options
          </div>
        </span>
      </div>
    </div>
    <div
      aria-label="Close dialog"
      class="mx_AccessibleButton mx_Dialog_cancelButton"
      role="button"
      tabindex="0"
    />
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`<RestoreKeyBackupDialog /> should not raise an error when recovery is valid 1`] = `
<DocumentFragment>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-labelledby="mx_BaseDialog_title"
    class="mx_RestoreKeyBackupDialog mx_Dialog_fixedWidth"
    data-focus-lock-disabled="false"
    role="dialog"
  >
    <div
      class="mx_Dialog_header"
    >
      <h1
        class="mx_Heading_h3 mx_Dialog_title"
        id="mx_BaseDialog_title"
      >
        Enter Recovery Key
      </h1>
    </div>
    <div
      class="mx_RestoreKeyBackupDialog_content"
    >
      <div>
        <p>
          <span>
            <strong>
              Warning
            </strong>
            : you should only set up key backup from a trusted computer.
          </span>
        </p>
        <p>
          Access your secure message history and set up secure messaging by entering your Recovery Key.
        </p>
        <div
          class="mx_RestoreKeyBackupDialog_primaryContainer"
        >
          <input
            class="mx_RestoreKeyBackupDialog_recoveryKeyInput"
            value="valid key"
          />
          <div
            class="mx_RestoreKeyBackupDialog_keyStatus"
          >
            👍 This looks like a valid Recovery Key!
          </div>
          <div
            class="mx_Dialog_buttons"
          >
            <span
              class="mx_Dialog_buttons_row"
            >
              <button
                data-testid="dialog-cancel-button"
                type="button"
              >
                Cancel
              </button>
              <button
                class="mx_Dialog_primary"
                data-testid="dialog-primary-button"
                type="button"
              >
                Next
              </button>
            </span>
          </div>
        </div>
        <span>
          If you've forgotten your Recovery Key you can 
          <div
            class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_link_inline"
            role="button"
            tabindex="0"
          >
            set up new recovery options
          </div>
        </span>
      </div>
    </div>
    <div
      aria-label="Close dialog"
      class="mx_AccessibleButton mx_Dialog_cancelButton"
      role="button"
      tabindex="0"
    />
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`<RestoreKeyBackupDialog /> should render 1`] = `
<DocumentFragment>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-labelledby="mx_BaseDialog_title"
    class="mx_RestoreKeyBackupDialog mx_Dialog_fixedWidth"
    data-focus-lock-disabled="false"
    role="dialog"
  >
    <div
      class="mx_Dialog_header"
    >
      <h1
        class="mx_Heading_h3 mx_Dialog_title"
        id="mx_BaseDialog_title"
      >
        Enter Recovery Key
      </h1>
    </div>
    <div
      class="mx_RestoreKeyBackupDialog_content"
    >
      <div>
        <p>
          <span>
            <strong>
              Warning
            </strong>
            : you should only set up key backup from a trusted computer.
          </span>
        </p>
        <p>
          Access your secure message history and set up secure messaging by entering your Recovery Key.
        </p>
        <div
          class="mx_RestoreKeyBackupDialog_primaryContainer"
        >
          <input
            class="mx_RestoreKeyBackupDialog_recoveryKeyInput"
            value=""
          />
          <div
            class="mx_RestoreKeyBackupDialog_keyStatus"
          />
          <div
            class="mx_Dialog_buttons"
          >
            <span
              class="mx_Dialog_buttons_row"
            >
              <button
                data-testid="dialog-cancel-button"
                type="button"
              >
                Cancel
              </button>
              <button
                class="mx_Dialog_primary"
                data-testid="dialog-primary-button"
                disabled=""
                type="button"
              >
                Next
              </button>
            </span>
          </div>
        </div>
        <span>
          If you've forgotten your Recovery Key you can 
          <div
            class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_link_inline"
            role="button"
            tabindex="0"
          >
            set up new recovery options
          </div>
        </span>
      </div>
    </div>
    <div
      aria-label="Close dialog"
      class="mx_AccessibleButton mx_Dialog_cancelButton"
      role="button"
      tabindex="0"
    />
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`<RestoreKeyBackupDialog /> should restore key backup when Recovery key is filled by user 1`] = `
<DocumentFragment>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-labelledby="mx_BaseDialog_title"
    class="mx_RestoreKeyBackupDialog mx_Dialog_fixedWidth"
    data-focus-lock-disabled="false"
    role="dialog"
  >
    <div
      class="mx_Dialog_header"
    >
      <h1
        class="mx_Heading_h3 mx_Dialog_title"
        id="mx_BaseDialog_title"
      >
        Keys restored
      </h1>
    </div>
    <div
      class="mx_RestoreKeyBackupDialog_content"
    >
      <div>
        <p>
          Successfully restored 1 keys
        </p>
        <p>
          Failed to decrypt 1 sessions!
        </p>
        <div
          class="mx_Dialog_buttons"
        >
          <span
            class="mx_Dialog_buttons_row"
          >
            <button
              class="mx_Dialog_primary"
              data-testid="dialog-primary-button"
              type="button"
            >
              OK
            </button>
          </span>
        </div>
      </div>
    </div>
    <div
      aria-label="Close dialog"
      class="mx_AccessibleButton mx_Dialog_cancelButton"
      role="button"
      tabindex="0"
    />
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`<RestoreKeyBackupDialog /> should restore key backup when passphrase is filled 1`] = `
<DocumentFragment>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-labelledby="mx_BaseDialog_title"
    class="mx_RestoreKeyBackupDialog mx_Dialog_fixedWidth"
    data-focus-lock-disabled="false"
    role="dialog"
  >
    <div
      class="mx_Dialog_header"
    >
      <h1
        class="mx_Heading_h3 mx_Dialog_title"
        id="mx_BaseDialog_title"
      >
        Keys restored
      </h1>
    </div>
    <div
      class="mx_RestoreKeyBackupDialog_content"
    >
      <div>
        <p>
          Successfully restored 1 keys
        </p>
        <p>
          Failed to decrypt 1 sessions!
        </p>
        <div
          class="mx_Dialog_buttons"
        >
          <span
            class="mx_Dialog_buttons_row"
          >
            <button
              class="mx_Dialog_primary"
              data-testid="dialog-primary-button"
              type="button"
            >
              OK
            </button>
          </span>
        </div>
      </div>
    </div>
    <div
      aria-label="Close dialog"
      class="mx_AccessibleButton mx_Dialog_cancelButton"
      role="button"
      tabindex="0"
    />
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`<RestoreKeyBackupDialog /> should restore key backup when the key is cached 1`] = `
<DocumentFragment>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-labelledby="mx_BaseDialog_title"
    class="mx_RestoreKeyBackupDialog mx_Dialog_fixedWidth"
    data-focus-lock-disabled="false"
    role="dialog"
  >
    <div
      class="mx_Dialog_header"
    >
      <h1
        class="mx_Heading_h3 mx_Dialog_title"
        id="mx_BaseDialog_title"
      >
        Keys restored
      </h1>
    </div>
    <div
      class="mx_RestoreKeyBackupDialog_content"
    >
      <div>
        <p>
          Successfully restored 1 keys
        </p>
        <p>
          Failed to decrypt 1 sessions!
        </p>
        <div
          class="mx_Dialog_buttons"
        >
          <span
            class="mx_Dialog_buttons_row"
          >
            <button
              class="mx_Dialog_primary"
              data-testid="dialog-primary-button"
              type="button"
            >
              OK
            </button>
          </span>
        </div>
      </div>
    </div>
    <div
      aria-label="Close dialog"
      class="mx_AccessibleButton mx_Dialog_cancelButton"
      role="button"
      tabindex="0"
    />
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`<RestoreKeyBackupDialog /> should restore key backup when the key is in secret storage 1`] = `
<DocumentFragment>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-labelledby="mx_BaseDialog_title"
    class="mx_RestoreKeyBackupDialog mx_Dialog_fixedWidth"
    data-focus-lock-disabled="false"
    role="dialog"
  >
    <div
      class="mx_Dialog_header"
    >
      <h1
        class="mx_Heading_h3 mx_Dialog_title"
        id="mx_BaseDialog_title"
      >
        Keys restored
      </h1>
    </div>
    <div
      class="mx_RestoreKeyBackupDialog_content"
    >
      <div>
        <p>
          Successfully restored 1 keys
        </p>
        <p>
          Failed to decrypt 1 sessions!
        </p>
        <div
          class="mx_Dialog_buttons"
        >
          <span
            class="mx_Dialog_buttons_row"
          >
            <button
              class="mx_Dialog_primary"
              data-testid="dialog-primary-button"
              type="button"
            >
              OK
            </button>
          </span>
        </div>
      </div>
    </div>
    <div
      aria-label="Close dialog"
      class="mx_AccessibleButton mx_Dialog_cancelButton"
      role="button"
      tabindex="0"
    />
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;
